creation of table hist net adds

--- a/.github/workflows/python-packages-publish.yml
+++ b/.github/workflows/python-packages-publish.yml
@@ -17,19 +17,19 @@ jobs:
       - name: Install Ubuntu related dependencies
         run: |
           sudo apt-get update && sudo apt-get install -y libsasl2-dev unixodbc-dev python3-venv
-#      - name: Install and Publish PyPi packages for MetaMart Ingestion
-#        env:
-#          TWINE_USERNAME: '${{ secrets.TWINE_METAMART_INGESTION_USERNAME }}'
-#          TWINE_PASSWORD: '${{ secrets.TWINE_METAMART_INGESTION_PASSWORD }}'
-#        run: |
-#          python3 -m venv env
-#          source env/bin/activate
-#          sudo make install_antlr_cli
-#          make install_dev generate
-#          cd ingestion; \
-#            python -m build; \
-#            twine check dist/*; \
-#            twine upload dist/* --verbose
+      - name: Install and Publish PyPi packages for MetaMart Ingestion
+        env:
+          TWINE_USERNAME: '${{ secrets.TWINE_METAMART_INGESTION_USERNAME }}'
+          TWINE_PASSWORD: '${{ secrets.TWINE_METAMART_INGESTION_PASSWORD }}'
+        run: |
+          python3 -m venv env
+          source env/bin/activate
+          sudo make install_antlr_cli
+          make install_dev generate
+          cd ingestion; \
+            python -m build; \
+            twine check dist/*; \
+            twine upload dist/* --verbose
       - name: Install and Publish PyPi packages for MetaMart Managed (Airflow) APIs
         env:
           TWINE_USERNAME: '${{ secrets.TWINE_METAMART_INGESTION_USERNAME }}'
