--- a/ingestion/Dockerfile
+++ b/ingestion/Dockerfile
@@ -79,7 +79,8 @@ ENV PIP_QUIET=1
 ARG RI_VERSION="1.6.0.0.dev0"
 RUN pip install --upgrade pip
 RUN pip install "metamart-managed-apis~=${RI_VERSION}" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.9.1/constraints-3.10.txt"
-RUN pip install "metamart-ingestion[${INGESTION_DEPENDENCY}]~=${RI_VERSION}"
+RUN pip install "metamart-ingestion~=${RI_VERSION}"
+#RUN pip install "metamart-ingestion[${INGESTION_DEPENDENCY}]~=${RI_VERSION}"
 
 # Temporary workaround for https://github.com/meta-mart/MetaMart/issues/9593
 RUN [ $(uname -m) = "x86_64" ] \
